--- a/index.html
+++ b/index.html
@@ -1,21 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>QuizApp</title>
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-</head>
-<body>
-    <h1>GitHub Test</h1>
-    <div class="card">
-        <div class="card-body">
-          This is some text within a card body.
-        </div>
-      </div>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, ratione? Ipsum, aliquam. Porro optio vel vitae quasi facere explicabo molestiae illo quam, ratione voluptatem earum rerum? Officiis consequatur quo aspernatur.</p>
 
-    <button class="btn btn-primary">Action</button>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>QuizApp</title>
+
+  <link rel="stylesheet" href="style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+    crossorigin="anonymous"></script>
+  <script src="script.js"></script>
+</head>
+
+<body onload="init()">
+  <nav class="navbar bg-body-tertiary">
+    <div class="container-fluid">
+      <span class="navbar-brand mb-0 h1">QuizApp</span>
+    </div>
+  </nav>
+
+
+  <div class="container">
+
+    <div class="quiz-card card">
+      <img src="img/questionmark.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title" id="question-text">Frage</h5>
+
+        <div class="card quiz-answer mb-2" onclick="answer('answer_1')">
+          <div class="card-body" id="answer_1">
+            Antwort
+          </div>
+        </div>
+
+        <div class="card quiz-answer mb-2" onclick="answer('answer_2')">
+          <div class="card-body" id="answer_2">
+            Antwort
+          </div>
+        </div>
+
+        <div class="card quiz-answer  mb-2" onclick="answer('answer_3')">
+          <div class="card-body" id="answer_3">
+            Antwort
+          </div>
+        </div>
+
+        <div class="card quiz-answer mb-2" onclick="answer('answer_4')">
+          <div class="card-body" id="answer_4">
+            Antwort
+          </div>
+        </div>
+
+        <div class="question-footer">
+          <span>
+            <b>1</b> von <b id="all-qs">5</b> Fragen
+          </span>
+          <button type="button" class="btn btn-primary">Nächste Frage</button>
+
+        </div>
+
+      </div>
+    </div>
+  </div>
+
 </body>
+
 </html>
